# Enlil

./: .gitignore  Cargo.toml  flake.nix
refs/: main_Broken.rs  main_deduplicated.rs  main_elmed.rs  main_native_plot.rs  main_plot.rs  main_table_bottom.rs  main_works.rs
src/: app.rs  main.rs  main_1.rs  main_2.rs  main_d.rs  main_elmed.rs  main_error_handling___bugWithFastFetching.rs  main_old.rs  main_simpler.rs  main_start.rs  monitoring_data.xlsx  nflow_out.txt  one_data_main.rs  server.py  t_app.rs  t_app_before_data.rs  t_main.rs  u_calculations.rs  u_randomTable.rs
