[package]
name = "enlil"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.30" }
egui_extras = { version = "*", features = ["all_loaders"] }
egui_plot = { version = "0.30.0"}
image = { version = "0.25", features = ["jpeg", "png"] }
crossbeam-channel = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
umya-spreadsheet = "2.2.3"
