[package]
name = "enlil"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
futures = "0.3.31"
iced = { version = "0.12", features = ["tokio","advanced","canvas"] }
# plotters = "0.3.7"
plotters-iced = "0.11.0"
plotters = { version = "0.3.7", features = ["chrono", "evcxr"] }
# plotters-iced = { version = "0.11.0", features = ["chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
